--- a/Frontend/hello/templates/settings/index.html
+++ b/Frontend/hello/templates/settings/index.html
@@ -56,6 +56,7 @@
                   </div>
                   <div class="modal-body">
                     <form  method="POST">
+                      {% csrf_token %}
                       <div class="form-group">
                         <label for="name" class="col-form-label">Имя:</label>
                         <input type="text" class="form-control" id="name" name="name"  required>
